Add link1 style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="https://e2168abf22564c38b71b81f52f87ee7d.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
-    
+    <p class="link1"><a href="https://e2168abf22564c38b71b81f52f87ee7d.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+
   </body>
 </html>
