--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p class="link1"><a href="https://e2168abf22564c38b71b81f52f87ee7d.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
-
+<video autoplay loop>
+  <source src="resources/videos/excursion (!).mp4" type="video/mp4">
+</video>
   </body>
 </html>
