--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="resources/css/style.css" type="text/css">
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Excursion</title>
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
