--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p class="link--cta"><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p><a class="link--cta" href="#">Download Excursion (Coming soon!)</a></p>
 <video autoplay loop>
-  <source src="resources/videos/excursion.mp4" type="video/mp4">
+  <source src="resources\videos\excursion.mp4" type="video/mp4">
 </video>
 <h2>Your personal travel guide</h2>
 <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
 <p><img src="resources/images/camp.jpg"></p>
 <p><img src="resources/images/phone.png"></p>
+<h2>Coming Soon for iPhone and Android</h2>
+<p><a class="link--cta" href="#">Download Excursion (Coming soon!)</a></p>
   </body>
 </html>
